text align fix

--- a/src/dashboard/students/Experts.css
+++ b/src/dashboard/students/Experts.css
@@ -3,7 +3,7 @@
   height: 40vh;
   display: flex;
   justify-content: center;
-  align-items: flex-end;
+  align-items: center;
 }
 
 .experts_title {
